# TEST-

./: .gitignore  README.md  cli.py  pyproject.toml
api_test_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
api_test_framework.egg-info/configs/: settings.yaml
api_test_framework.egg-info/configs/environments/: dev.yaml  prod.yaml  staging.yaml
api_test_framework.egg-info/data/api_docs/: swagger_sample.json
api_test_framework.egg-info/data/testcases/: create_order.json  user_login.csv
api_test_framework.egg-info/output/parsed/: parsed_apis.json
api_test_framework.egg-info/output/testcases/: test_用户管理_api.py  test_订单_api.py  test_认证_api.py
api_test_framework.egg-info/src/: __init__.py  conftest.py
api_test_framework.egg-info/src/client/: __init__.py  auth_manager.py  base_client.py  ws_client.py
api_test_framework.egg-info/src/core/: config.py  llm_client.py  types.py
api_test_framework.egg-info/src/generator/: llm_generator.py  template_generator.py  test_generator.py
api_test_framework.egg-info/src/models/: context.py
api_test_framework.egg-info/src/parser/: apifox_parser.py  doc_parser.py  llm_parser.py  markdown_parser.py  normalizer.py  openapi_parser.py
api_test_framework.egg-info/src/prompts/: extraction_prompts.py  generation_prompts.py
api_test_framework.egg-info/src/reporter/: allure_helper.py
api_test_framework.egg-info/src/utils/: assertions.py  data_loader.py  extractor.py  logger.py
api_test_framework.egg-info/tests/: conftest.py  test_order_api.py  test_user_api.py  test_websocket.py
