[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api-test-framework"
version = "1.0.0"
description = "AI + 接口自动化测试框架：支持接口文档解析、AI 测试用例生成、自动执行、报告输出"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # 测试框架
    "pytest>=8.0",
    "allure-pytest>=2.13",
    # HTTP 客户端
    "requests>=2.32",
    "httpx>=0.27",
    # CLI
    "click>=8.1",
    "rich>=13.0",
    # 配置 & 数据
    "pyyaml>=6.0",
    "jsonschema>=4.23",
    "jsonpath-ng>=1.6",
    "pandas>=2.2",
    # WebSocket
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "ruff>=0.9",
]

[project.scripts]
api-test = "cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests", "output/testcases"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "smoke: 冒烟测试",
    "regression: 回归测试",
    "p0: 最高优先级",
    "p1: 高优先级",
    "p2: 中优先级",
    "p3: 低优先级",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
